# brave

./: .gitattributes  .gitignore  Cargo.toml  README.md  mysql.sql
conf/: blogs.toml  log4rs.yaml
sql/: blog.sql
src/: cached.rs  config.rs  lib.rs  main.rs  mysql.rs  path.rs  tera.rs  test.rs
src/entity/: blog_comments.rs  blog_config.rs  blog_details.rs  blog_files.rs  blog_group.rs  blog_info.rs  blog_label.rs  blog_links.rs  blog_post.rs  blog_user.rs  comments.rs  config.rs  files.rs  info.rs  label.rs  links.rs  mod.rs  post.rs
src/methods/: about.rs  base.rs  blog.rs  details.rs  file.rs  index.rs  links.rs  mod.rs  post.rs  route.rs  timeline.rs
src/methods/admin/: blog.rs  file.rs  login.rs  mod.rs  user.rs
src/util/: auth.rs  base.rs  config.rs  date_utils.rs  head.rs  mod.rs  multipart_file.rs  mysql.rs  paging.rs  params.rs  path.rs  results.rs  session.rs  tera.rs
static/css/: bootstrap.min.css  bootstrap.min_v3.css  custom.css  index.css  login.css  materialdesignicons.min.css  page.css  style.about.css  style.home.css  style.min.css
static/js/: index.min.js  jquery.yestop.js  jsonUtil.js  parent.js  script.home.js  script.js  view.js
static/js/highlight/: highlight.pack.js
templates/: about.html  base.html  home.html  index.html  links.html  post.html  timeline.html
templates/admin/: index.html  login.html  main.html
templates/blog/: base.html  details.html  index.html  timeline.html
templates/error/: 404.html
templates/view/: about.html  base.html  details.html  friendLinks.html  group.html  index.html  timeline.html
(+6 files in other folders)
