[package]
name = "blogs"
version = "0.1.0"
authors = ["gxk <gxk_717@163.com>"]
edition = "2021"


[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-multipart = "0.3.0"
actix-rt = "2.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.14"
log4rs = "1.0.0"

tera = "1.13"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bstr = "0.2"
toml = "0.5.8"
uuid = { version = "0.8", features = ["serde", "v4"] }

bson = "2.0"
rbatis = { version = "3.0", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }

md5 = "0.7.0"

