[package]
name = "brave"
version = "0.1.0"
authors = ["gxk <gxk_717@163.com>"]
edition = "2021"


[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"

serde = { version = "1.0", features = ["derive"] }

log = "0.4.14"
log4rs = "1.0.0"

tera = "1.13"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.5.8"

bson = "2.0"
rbatis = { version = "3.0", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }

cached-rs = { git = "https://gitee.com/gaoxiangkang/cached-rs.git" }

